--- a/GActifs/src/main/resources/application.properties
+++ b/GActifs/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=GActifs
-spring.datasource.url=jdbc:mysql://localhost:3306/g2-actif
+
+# Base de données
+spring.datasource.url=jdbc:mysql://localhost:3306/g2_actif?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # Swagger / OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
