--- a/GActifs/src/main/resources/application.properties
+++ b/GActifs/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=GActifs
 
+# Base de donnéesventaa
 # Base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/g2_actif?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/gactifs
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 # Swagger / OpenAPI
 springdoc.api-docs.enabled=true
